--- a/apigateway/apigw-api.yml
+++ b/apigateway/apigw-api.yml
@@ -3,4 +3,38 @@ kind: API
 metadata:
   name: apitest-private-nlb
 spec:
-  body: <%= File.read('/open-api.json').inspect %>
+  body: '{
+    "openapi": "3.0.1",
+    "info": {
+        "title": "ack-apigwv2-import-test-private-nlb",
+        "version": "v1"
+    },
+    "paths": {
+        "default": {
+            "x-amazon-apigateway-any-method" : {
+                "isDefaultRoute" : true,
+                "x-amazon-apigateway-integration" : {
+                    "payloadFormatVersion" : "1.0",
+                    "connectionId" : "ay5fxb",
+                    "type" : "http_proxy",
+                    "httpMethod" : "GET",
+                    "uri" : "arn:aws:elasticloadbalancing:sa-east-1:991345343226:listener/net/k8s-default-authorse-6de7f90e55/eb2d2734a04956b6/79a74c287f5b63b1",
+                    "connectionType" : "VPC_LINK"
+                }
+            }
+        },
+        "/meta": {
+            "get": {
+                "x-amazon-apigateway-integration": {
+                    "uri" : "arn:aws:elasticloadbalancing:sa-east-1:991345343226:listener/net/k8s-default-echoserv-681399b682/ac9b066e05b1c041/9c24a1c4d0541e10",
+                    "httpMethod": "GET",
+                    "connectionId": "ay5fxb",
+                    "type": "HTTP_PROXY",
+                    "connectionType": "VPC_LINK",
+                    "payloadFormatVersion": "1.0"
+                }
+            }
+        }
+    },
+    "components": {}
+}'
