--- a/infra/eks-infra.yml
+++ b/infra/eks-infra.yml
@@ -8,11 +8,12 @@ Parameters:
     Description: The desired name of your AWS EKS Cluster.
   EKSVersion:
     Type: String
-    Default: 1.18
+    Default: 1.21
     AllowedValues: 
       - 1.16
       - 1.17
       - 1.18
+      - 1.21
     Description: The desired version of your AWS EKS Cluster.
   EKSNodeGroupName:
     Type: String
@@ -51,18 +52,27 @@ Parameters:
     Description: The CIDR range for the VPC. This should be a valid private (RFC 1918) CIDR range.
     AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
     ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
+  PublicSubnet01Name:
+    Type: String
+    Default: "EKS-Cluster-PublicSubnet01"
   PublicSubnet01Block:
     Type: String
     Default: 10.0.0.0/24
     Description: CidrBlock for public subnet 01 within the VPC.
     AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
     ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
+  PublicSubnet02Name:
+    Type: String
+    Default: "EKS-Cluster-PublicSubnet02"
   PublicSubnet02Block:
     Type: String
     Default: 10.0.1.0/24
     Description: CidrBlock for public subnet 02 within the VPC.
     AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
     ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
+  PublicSubnet03Name:
+    Type: String
+    Default: "EKS-Cluster-PublicSubnet03"
   PublicSubnet03Block:
     Type: String
     Default: 10.0.2.0/24
@@ -111,10 +121,10 @@ Parameters:
   EC2InstanceTypeBastionHost:
     Type: String
     Default: t2.nano
-  EC2AMI:
+  EC2AMIBastionHost:
     Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
     Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
-  KeyName:
+  KeyNameBastionHost:
     Type: String
     Default: bastion-host-key-pair
 Metadata:
@@ -213,7 +223,7 @@ Resources:
         Ref: EksVPC
       Tags:
         - Key: Name
-          Value: !Sub "${AWS::StackName}-PublicSubnet01"
+          Value: !Ref PublicSubnet01Name
         - Key: Project
           Value: aws-eks-load-balancer-controller
     
@@ -228,7 +238,7 @@ Resources:
         Ref: EksVPC
       Tags:
         - Key: Name
-          Value: !Sub "${AWS::StackName}-PublicSubnet02"
+          Value: !Ref PublicSubnet02Name
         - Key: Project
           Value: aws-eks-load-balancer-controller
 
@@ -243,7 +253,7 @@ Resources:
         Ref: EksVPC
       Tags:
         - Key: Name
-          Value: !Sub "${AWS::StackName}-PublicSubnet03"
+          Value: !Ref PublicSubnet03Name
         - Key: Project
           Value: aws-eks-load-balancer-controller
   
@@ -342,46 +352,52 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       AvailabilityZone: !Ref AvailabilityZoneSubnet01
-      MapPublicIpOnLaunch: true
+      MapPublicIpOnLaunch: false
       CidrBlock:
         Ref: PrivateSubnet01Block
       VpcId:
         Ref: EksVPC
       Tags:
         - Key: Name
-          Value: !Ref PrivateSubnet1
+          Value: !Ref PrivateSubnet01Name
         - Key: Project
           Value: aws-eks-load-balancer-controller
+        - Key: kubernetes.io/role/internal-elb
+          Value: 1
     
   EksPrivateSubnet02:
     Type: AWS::EC2::Subnet
     Properties:
       AvailabilityZone: !Ref AvailabilityZoneSubnet02
-      MapPublicIpOnLaunch: true
+      MapPublicIpOnLaunch: false
       CidrBlock:
         Ref: PrivateSubnet02Block
       VpcId:
         Ref: EksVPC
       Tags:
         - Key: Name
-          Value: !Sub "${AWS::StackName}-PrivateSubnet02"
+          Value: !Ref PrivateSubnet02Name
         - Key: Project
           Value: aws-eks-load-balancer-controller
+        - Key: kubernetes.io/role/internal-elb
+          Value: 1
 
   EksPrivateSubnet03:
     Type: AWS::EC2::Subnet
     Properties:
       AvailabilityZone: !Ref AvailabilityZoneSubnet03
-      MapPublicIpOnLaunch: true
+      MapPublicIpOnLaunch: false
       CidrBlock:
         Ref: PrivateSubnet03Block
       VpcId:
         Ref: EksVPC
       Tags:
         - Key: Name
-          Value: !Sub "${AWS::StackName}-PrivateSubnet03"
+          Value: !Ref PrivateSubnet03Name
         - Key: Project
           Value: aws-eks-load-balancer-controller
+        - Key: kubernetes.io/role/internal-elb
+          Value: 1
   
   EksPrivateSubnet01RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
@@ -412,18 +428,6 @@ Resources:
         - Key: Project
           Value: aws-eks-load-balancer-controller
 
-  BastionSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription:
-        !Sub 'Security group for ${AWS::StackName} bastion host'
-      VpcId: !Ref EksVPC
-      Tags:
-        - Key: Name
-          Value: !Sub "${AWS::StackName}-BastionHost-SecurityGroup"
-        - Key: Project
-          Value: aws-eks-load-balancer-controller
-
   VPCLinkSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -433,34 +437,59 @@ Resources:
         - Key: Name
           Value: !Sub "VPCLink-SecurityGroup"
         - Key: Project
-          Value: aws-eks-load-balancer-controller          
+          Value: aws-eks-load-balancer-controller    
 
-  BastionAllowInboundSSHFromInternet:
-    Type: AWS::EC2::SecurityGroupIngress
-    Properties:
-      GroupId: !Ref BastionSecurityGroup
-      IpProtocol: tcp
-      FromPort: 22
-      ToPort: 22
-      CidrIp: 0.0.0.0/0
+  # BastionSecurityGroup:
+  #   Type: AWS::EC2::SecurityGroup
+  #   Properties:
+  #     GroupDescription:
+  #       !Sub 'Security group for ${AWS::StackName} bastion host'
+  #     VpcId: !Ref EksVPC
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub "${AWS::StackName}-BastionHost-SecurityGroup"
+  #       - Key: Project
+  #         Value: aws-eks-load-balancer-controller                
+
+  # BastionAllowInboundSSHFromInternet:
+  #   Type: AWS::EC2::SecurityGroupIngress
+  #   Properties:
+  #     GroupId: !Ref BastionSecurityGroup
+  #     IpProtocol: tcp
+  #     FromPort: 22
+  #     ToPort: 22
+  #     CidrIp: 0.0.0.0/0
   
-  BastionAllowOutboundSSHToApplication:
-    Type: AWS::EC2::SecurityGroupEgress
-    Properties:
-      GroupId: !Ref BastionSecurityGroup
-      IpProtocol: tcp
-      FromPort: 22
-      ToPort: 22
-      DestinationSecurityGroupId: !Ref EksSecurityGroup
+  # BastionAllowOutboundSSHToApplication:
+  #   Type: AWS::EC2::SecurityGroupEgress
+  #   Properties:
+  #     GroupId: !Ref BastionSecurityGroup
+  #     IpProtocol: tcp
+  #     FromPort: 22
+  #     ToPort: 22
+  #     DestinationSecurityGroupId: !Ref EksSecurityGroup
   
-  EksSecurityGroupAllowInboundSSHFromBastion:
-    Type: AWS::EC2::SecurityGroupIngress
-    Properties:
-      GroupId: !Ref EksSecurityGroup
-      IpProtocol: tcp
-      FromPort: 22
-      ToPort: 22
-      SourceSecurityGroupId: !Ref BastionSecurityGroup
+  # EksSecurityGroupAllowInboundSSHFromBastion:
+  #   Type: AWS::EC2::SecurityGroupIngress
+  #   Properties:
+  #     GroupId: !Ref EksSecurityGroup
+  #     IpProtocol: tcp
+  #     FromPort: 22
+  #     ToPort: 22
+  #     SourceSecurityGroupId: !Ref BastionSecurityGroup
+
+  # BastionInstance:
+  #   Type: AWS::EC2::Instance
+  #   Properties:
+  #     ImageId: !Ref EC2AMIBastionHost
+  #     InstanceType: !Ref EC2InstanceTypeBastionHost
+  #     KeyName: !Ref KeyNameBastionHost
+  #     SubnetId: !Ref EksPublicSubnet01
+  #     SecurityGroupIds:
+  #       - !Ref BastionSecurityGroup
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub 'BastionInstance-${AWS::StackName}'
 
   EksIAMRole:
     Type: AWS::IAM::Role
@@ -482,7 +511,7 @@ Resources:
     Type: AWS::EKS::Cluster
     Properties:
       Name: !Ref EKSClusterName
-      Version: !Ref EKSVersion
+      #Version: !Ref EKSVersion
       RoleArn:
         "Fn::GetAtt": ["EksIAMRole", "Arn"]
       ResourcesVpcConfig:
@@ -510,6 +539,15 @@ Resources:
         - !Sub "arn:${AWS::Partition}:iam::aws:policy/AmazonEKSWorkerNodePolicy"
         - !Sub "arn:${AWS::Partition}:iam::aws:policy/AmazonEKS_CNI_Policy"
         - !Sub "arn:${AWS::Partition}:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
+        - !Sub "arn:${AWS::Partition}:iam::aws:policy/AmazonAPIGatewayAdministrator"
+      Policies:
+        - PolicyName: IAMCreateServiceLikedRole
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow,
+                Action: iam:CreateServiceLinkedRole,
+                Resource": !Ref EksCluster
       Path: /
 
   EksNodeGroup:
